# RDB

./: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.js
src/: app.css  hooks.client.ts  setupTests.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20230109212937_databases.down.sql  20230109212937_databases.up.sql  20230109214830_config.down.sql  20230109214830_config.up.sql  20230109220411_db-user.down.sql  20230109220411_db-user.up.sql  20230109220614_permissions.down.sql  20230109220614_permissions.up.sql  20230109220803_user.down.sql  20230109220803_user.up.sql
src-tauri/src/: main.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: config.rs  db.rs  db_user.rs  error.rs  mod.rs  permissions.rs  users.rs
src-tauri/src/server/: mod.rs
src-tauri/src/server/public/: mod.rs
src-tauri/src/utils/: mod.rs
src/lib/components/: Button.svelte  Container.svelte  Icon.svelte  Input.svelte  MenuToggle.svelte  SideNav.svelte  index.ts
src/lib/utils/: actions.ts  auth.ts  index.ts  store.ts  types.ts
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
src/routes/connections/: +page.svelte
src/routes/connections/create/: +page.svelte
src/routes/create-account/: +page.svelte
src/routes/login/: +page.svelte
src/routes/logout/: +page.svelte
src/routes/recover/: +page.svelte
src/routes/settings/: +layout.svelte
src/routes/settings/account/: +page.svelte
src/routes/settings/config/: +page.svelte
src/test/lib/utils/: auth.test.ts  store.test.ts
src/test/routes/: layout.test.ts
