[package]
name = "RDB"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.3", features = ["shell-open", "window-all"] }
actix-web = "4.2.1"
dotenv = "0.15.0"
actix-cors = "0.6.4"
sqlx = { version = "0.6.2", features = [ "runtime-actix-rustls", "postgres", "sqlite", "macros", "migrate", "time", "json", "uuid" ] }
uuid = { version = "1.2.2", features = [ "serde", "v4" ] }
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
cookie = "0.16.2"
thiserror = "1.0.38"
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
